--- a/index.html
+++ b/index.html
@@ -5,8 +5,32 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Зачетный макет</title>
+    <link rel="stylesheet" href="/css/normalize.css">
+    <link rel="stylesheet" href="/css/style.css">
 </head>
 <body>
-    <h1>Hello!</h1>
+    <div class="container">
+        <header class="header">
+            <a href="#" class="h-logo"></a>
+            <nav class="h-menu">
+                <ul class="h-menu-list">
+                    <li class="h-menu-item">Home</li>
+                    <li class="h-menu-item">About Us</li>
+                    <li class="h-menu-item">Portfolio</li>
+                    <li class="h-menu-item">Features</li>
+                    <li class="h-menu-item">Blog</li>
+                    <li class="h-menu-item">Pricing</li>
+                    <li class="h-menu-item">Shortcodes</li>
+                    <li class="h-menu-item">Contact</li>
+                </ul>
+                <ul class="h-right">
+                    <li class="h-right-cart"></li>
+                    <li class="h-right-search"></li>
+                </ul>
+            </nav>      
+        </header>
+        <main class="main"></main>
+        <footer class="footer"></footer>
+    </div>
 </body>
 </html>
