Верстка первого блока

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,30 +8,48 @@
     <title>Зачетный макет</title>
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap">
 </head>
+
 <body>
     <div class="container">
         <header class="header">
             <a href="#" class="h-logo"></a>
             <nav class="h-menu">
                 <ul class="h-menu-list">
-                    <li class="h-menu-item">Home</li>
-                    <li class="h-menu-item">About Us</li>
-                    <li class="h-menu-item">Portfolio</li>
-                    <li class="h-menu-item">Features</li>
-                    <li class="h-menu-item">Blog</li>
-                    <li class="h-menu-item">Pricing</li>
-                    <li class="h-menu-item">Shortcodes</li>
-                    <li class="h-menu-item">Contact</li>
+                    <li class="h-menu-item"><a href="#" class="h-menu-item-link">Home</a></li>
+                    <li class="h-menu-item"><a href="#" class="h-menu-item-link">About Us</a></li>
+                    <li class="h-menu-item"><a href="#" class="h-menu-item-link">Portfolio</a></li>
+                    <li class="h-menu-item"><a href="#" class="h-menu-item-link">Features</a></li>
+                    <li class="h-menu-item"><a href="#" class="h-menu-item-link">Blog</a></li>
+                    <li class="h-menu-item"><a href="#" class="h-menu-item-link">Pricing</a></li>
+                    <li class="h-menu-item"><a href="#" class="h-menu-item-link">Shortcodes</a></li>
+                    <li class="h-menu-item"><a href="#" class="h-menu-item-link">Contact</a></li>
                 </ul>
                 <ul class="h-right">
-                    <li class="h-right-cart"></li>
-                    <li class="h-right-search"></li>
+                    <li class="h-right-cart"><a href="#" class="h-right-cart-link"></a></li>
+                    <li class="h-right-search"><a href="#" class="h-right-search-link"></a></li>
                 </ul>
-            </nav>      
+            </nav>
         </header>
-        <main class="main"></main>
+        <main class="main">
+            <section class="m-block">
+                <span class="m-block-subtitle">Unique and Modern Design</span>
+                <h1 class="m-block-title">Portfolio PSD Template</h1>
+                <span class="m-block-description">Nam liber tempor cum soluta nobis eleifend option congue nihil imper&shy;diet doming id quod mazim placerat facer possim assum.</span>
+                <a href="#" class="m-block-link">Get Started</a>
+                <ul class="m-block-list">
+                    <li class="m-block-item"><a href="#" class="m-block-pag"></a></li>
+                    <li class="m-block-item"><a href="#" class="m-block-pag"></a></li>
+                    <li class="m-block-item"><a href="#" class="m-block-pag"></a></li>
+                    <li class="m-block-item"><a href="#" class="m-block-pag"></a></li>
+                    <li class="m-block-item"><a href="#" class="m-block-pag"></a></li>
+                </ul>
+            </section>
+        </main>
         <footer class="footer"></footer>
     </div>
 </body>
+
 </html>
