верстка стрелок и добавление изображений

--- a/index.html
+++ b/index.html
@@ -43,6 +43,8 @@
             </nav>
         </header>
         <main class="main">
+            <a href="#" class="arrow-left"></a>
+            <a href="###" class="arrow-right"></a>
             <section class="m-block">
                 <span class="m-block-subtitle">Unique and Modern Design</span>
                 <h1 class="m-block-title">Portfolio PSD Template</h1>
@@ -57,6 +59,7 @@
                     <li class="m-block-item"><a href="#" class="m-block-pag"></a></li>
                 </ul>
             </section>
+           
         </main>
         <footer class="footer"></footer>
     </div>
