Сверстан блок advantage

--- a/index.html
+++ b/index.html
@@ -43,9 +43,10 @@
             </nav>
         </header>
         <main class="main">
-            <a href="#" class="arrow-left"></a>
-            <a href="###" class="arrow-right"></a>
+
             <section class="m-block">
+                <a href="#" class="arrow-left"></a>
+                <a href="###" class="arrow-right"></a>
                 <span class="m-block-subtitle">Unique and Modern Design</span>
                 <h1 class="m-block-title">Portfolio PSD Template</h1>
                 <span class="m-block-description">Nam liber tempor cum soluta nobis eleifend option congue nihil
@@ -59,7 +60,52 @@
                     <li class="m-block-item"><a href="#" class="m-block-pag"></a></li>
                 </ul>
             </section>
-           
+            <article class="m-advantage">
+                <a href="#" class="m-advantage-block">
+                    <svg class="m-advantage-icon" xmlns="http://www.w3.org/2000/svg" width="47.6" height="47.602"
+                        viewBox="108 0 47.6 47.602">
+                        <path
+                            d="M155.134 16.609a1.587 1.587 0 0 0-2.249 0L139.04 30.453l-19.468 8.573-2.999-3 8.577-19.465 13.844-13.846c.59-.59.62-1.53.086-2.155a1.622 1.622 0 0 0-.086-.094 1.588 1.588 0 0 0-.79-.43 1.585 1.585 0 0 0-1.377.353 1.61 1.61 0 0 0-.082.077L122.477 14.73 108 47.602l32.868-14.478 14.266-14.268a1.573 1.573 0 0 0 .44-.837 1.59 1.59 0 0 0-.44-1.41Zm-22.551 7.98a1.58 1.58 0 0 0 .023 0 1.591 1.591 0 0 0 1.08-.422 1.63 1.63 0 0 0 .045-.043l13.333-13.332a1.587 1.587 0 0 0 .433-.801 1.587 1.587 0 0 0-.433-1.449 1.588 1.588 0 0 0-2.158-.085 1.62 1.62 0 0 0-.092.085L131.48 21.874a1.58 1.58 0 0 0-.44.835 1.59 1.59 0 0 0 1.542 1.88ZM128 20.64c.31.312.719.466 1.125.466a1.598 1.598 0 0 0 .03 0 1.585 1.585 0 0 0 1.095-.466l13.332-13.33a1.589 1.589 0 0 0 .084-2.16 1.612 1.612 0 0 0-.084-.09 1.581 1.581 0 0 0-.783-.43 1.587 1.587 0 0 0-1.467.43L128 18.392a1.582 1.582 0 0 0-.439.834 1.588 1.588 0 0 0 .439 1.415Zm6.961 6.964a1.596 1.596 0 0 0 .912.451 1.59 1.59 0 0 0 .213.014 1.597 1.597 0 0 0 1.05-.396 1.652 1.652 0 0 0 .075-.069l13.331-13.332a1.589 1.589 0 0 0 .429-.777 1.584 1.584 0 0 0-.345-1.382 1.616 1.616 0 0 0-.084-.09 1.586 1.586 0 0 0-.765-.427 1.585 1.585 0 0 0-1.484.427L134.96 25.355a1.58 1.58 0 0 0-.438.83 1.594 1.594 0 0 0 .438 1.42Z" />
+                    </svg>
+                    <span class="m-advantage-title">Web & App Design</span>
+                    <span class="m-advantage-desciption">Nam liber tempor cum soluta nobis eleifend option congue nihil
+                        imperdiet doming id quod mazim.</span>
+                </a>
+                <a href="#" class="m-advantage-block">
+                    <svg class="m-advantage-icon" xmlns="http://www.w3.org/2000/svg" width="42.874" height="39.178"
+                        viewBox="112 0 42.874 39.178">
+                        <path
+                            d="m133.437 34.879-17.452-9.411L112 27.615l21.437 11.563 21.437-11.563-3.985-2.147-17.452 9.411Zm0-34.879L112 11.56l21.437 11.562 21.437-11.562L133.437 0Zm0 26.852-17.452-9.41-3.985 2.15 21.437 11.556 21.437-11.557-3.985-2.149-17.452 9.41Z" />
+                    </svg>
+                    <span class="m-advantage-title">Web & App Design</span>
+                    <span class="m-advantage-desciption">Nam liber tempor cum soluta nobis eleifend option congue nihil
+                        imperdiet doming id quod mazim.</span>
+                </a>
+                <a href="#" class="m-advantage-block">
+                    <svg class="m-advantage-icon" xmlns="http://www.w3.org/2000/svg" width="43.567" height="43.566"
+                        viewBox="110 0 43.567 43.566">
+                        <path
+                            d="M151.327 18.083a2.984 2.984 0 0 0-.365-.157 6.637 6.637 0 0 1-2.477-1.639 4.541 4.541 0 0 1-.568-.726 2.652 2.652 0 0 1-.196-.377 2.816 2.816 0 0 1-.153-.525c-.119-.596-.115-1.352.015-2.108a6.24 6.24 0 0 1 .494-1.601c.28-.588.367-1.297.288-2.006a4.38 4.38 0 0 0-1.175-2.568 4.365 4.365 0 0 0-2.571-1.175c-.606-.067-1.211-.012-1.74.18a2.957 2.957 0 0 0-.262.11 6.243 6.243 0 0 1-1.597.493c-.92.16-1.84.132-2.474-.077a2.304 2.304 0 0 1-.16-.06c-.548-.225-1.179-.761-1.719-1.441a6.456 6.456 0 0 1-1.022-1.8A3.808 3.808 0 0 0 134.3.884c-.62-.46-1.367-.775-2.114-.86a3.54 3.54 0 0 0-.402-.024c-1.62 0-3.35 1.167-3.862 2.606-.447 1.257-1.455 2.48-2.356 3.041a2.66 2.66 0 0 1-.385.2 2.81 2.81 0 0 1-.525.155c-.597.118-1.353.114-2.109-.017a6.243 6.243 0 0 1-1.596-.494 3.4 3.4 0 0 0-1.213-.306c-1.192-.087-2.52.35-3.36 1.19-1.076 1.078-1.492 2.948-.996 4.314a2.95 2.95 0 0 0 .109.26 6.229 6.229 0 0 1 .493 1.599c.159.92.13 1.84-.08 2.474a2.323 2.323 0 0 1-.06.16c-.23.552-.768 1.19-1.452 1.732a6.373 6.373 0 0 1-1.786 1.012 3.791 3.791 0 0 0-1.723 1.343c-.46.619-.775 1.367-.86 2.115a3.54 3.54 0 0 0-.023.399 3.54 3.54 0 0 0 .023.397c.154 1.365 1.076 2.73 2.24 3.317a2.992 2.992 0 0 0 .343.147 6.66 6.66 0 0 1 2.46 1.626c.229.24.423.485.573.723a2.704 2.704 0 0 1 .207.394c.263.632.312 1.633.138 2.633a6.236 6.236 0 0 1-.493 1.596 3.393 3.393 0 0 0-.306 1.211c-.086 1.192.351 2.52 1.193 3.361 1.081 1.083 2.965 1.497 4.334.988a2.941 2.941 0 0 0 .239-.1c1.308-.622 3.056-.75 4.07-.414a2.31 2.31 0 0 1 .16.06c.548.227 1.178.763 1.718 1.441a6.459 6.459 0 0 1 1.023 1.802 3.806 3.806 0 0 0 1.347 1.72c.73.54 1.638.881 2.515.881a3.545 3.545 0 0 0 .402-.023c1.495-.17 2.99-1.26 3.46-2.578.512-1.438 1.757-2.836 2.738-3.246.632-.263 1.633-.311 2.634-.137a6.257 6.257 0 0 1 1.599.493 3.394 3.394 0 0 0 1.211.307c.26.018.526.012.792-.017a4.368 4.368 0 0 0 2.57-1.177 4.372 4.372 0 0 0 1.175-2.568c.068-.606.013-1.213-.18-1.743a2.944 2.944 0 0 0-.108-.26 6.254 6.254 0 0 1-.494-1.596c-.16-.921-.132-1.842.077-2.476a2.303 2.303 0 0 1 .059-.159 2.675 2.675 0 0 1 .205-.391c.562-.9 1.784-1.905 3.038-2.351a3.81 3.81 0 0 0 1.724-1.347c.54-.73.881-1.638.881-2.514 0-1.48-.974-3.052-2.24-3.7Zm-27.537 3.709a7.984 7.984 0 0 0 7.994 7.983 7.981 7.981 0 0 0 7.984-7.983 7.986 7.986 0 0 0-7.984-7.994 7.988 7.988 0 0 0-7.994 7.994Z"
+                            fill-rule="evenodd" data-name="icon" />
+                    </svg>
+
+                    <span class="m-advantage-title">Web & App Design</span>
+                    <span class="m-advantage-desciption">Nam liber tempor cum soluta nobis eleifend option congue nihil
+                        imperdiet doming id quod mazim.</span>
+                </a>
+                <a href="#" class="m-advantage-block">
+                    <svg class="m-advantage-icon" xmlns="http://www.w3.org/2000/svg" width="50.901" height="35.649"
+                        viewBox="109 0 50.901 35.649">
+                        <path
+                            d="M149.109 34.705a3.788 3.788 0 0 0 1.074-1.277l9.49-19.422a2.7 2.7 0 0 0 .05-.11c.414-.952.084-1.753-.758-2.02a2.194 2.194 0 0 0-.664-.096h-35.298a2.78 2.78 0 0 0-.08.002c-.804.023-1.684.39-2.384.942a3.79 3.79 0 0 0-1.074 1.282l-9.492 19.422a2.675 2.675 0 0 0-.051.11c-.51 1.168.11 2.11 1.42 2.11h35.298a2.792 2.792 0 0 0 .088 0c.802-.026 1.682-.393 2.38-.943ZM122.165 9.37a6.876 6.876 0 0 0-4.904 3.54L109 29.813V7.648a2.475 2.475 0 0 1 2.454-2.48 1.619 1.619 0 0 1 .003 0h10.817V3.723c0-.995.382-1.923 1.081-2.627A3.64 3.64 0 0 1 125.962 0h6.29a3.707 3.707 0 0 1 3.684 3.723v1.443h10.817a2.479 2.479 0 0 1 2.457 2.482v1.654h-26.207a5.355 5.355 0 0 0-.838.068Zm2.566-5.647c0-.328.133-.64.363-.875a1.198 1.198 0 0 1 .866-.367h6.29a1.235 1.235 0 0 1 1.229 1.242v1.445h-8.748V3.723Z" />
+                    </svg>
+
+                    <span class="m-advantage-title">Web & App Design</span>
+                    <span class="m-advantage-desciption">Nam liber tempor cum soluta nobis eleifend option congue nihil
+                        imperdiet doming id quod mazim.</span>
+                </a>
+            </article>
+            
         </main>
         <footer class="footer"></footer>
     </div>
