верчстка блока slider

--- a/index.html
+++ b/index.html
@@ -105,7 +105,15 @@
                         imperdiet doming id quod mazim.</span>
                 </a>
             </article>
-            
+            <article class="m-slider">
+                <h2 class="m-slider-title">Waxom is Realization of your Ideas.</h2>
+                <p class="m-slider-description">Investigationes demonstraverunt lectores legere me lius quod ii legunt saepius. Claritas est etiam processus dynamicus, qui sequitur mutationem consuetudium.</p>
+                <div class="m-slider-wrapper">
+                    <a class="m-slider-img" href="#"><img src="img/browser-left.png" alt="scrinshot"></a>
+                    <a class="m-slider-img" href="#"><img src="img/browser-right.png" alt="scrinshot"></a>
+                    <a class="m-slider-img" href="#"><img src="img/browser-center.png" alt="scrinshot"></a>
+                </div>
+            </article>
         </main>
         <footer class="footer"></footer>
     </div>
