верстка блока Purchase

--- a/index.html
+++ b/index.html
@@ -107,13 +107,22 @@
             </article>
             <article class="m-slider">
                 <h2 class="m-slider-title">Waxom is Realization of your Ideas.</h2>
-                <p class="m-slider-description">Investigationes demonstraverunt lectores legere me lius quod ii legunt saepius. Claritas est etiam processus dynamicus, qui sequitur mutationem consuetudium.</p>
+                <p class="m-slider-description">Investigationes demonstraverunt lectores legere me lius quod ii legunt
+                    saepius. Claritas est etiam processus dynamicus, qui sequitur mutationem consuetudium.</p>
                 <div class="m-slider-wrapper">
                     <a class="m-slider-img" href="#"><img src="img/browser-left.png" alt="scrinshot"></a>
                     <a class="m-slider-img" href="#"><img src="img/browser-right.png" alt="scrinshot"></a>
                     <a class="m-slider-img" href="#"><img src="img/browser-center.png" alt="scrinshot"></a>
                 </div>
             </article>
+            <section class="m-purchase">
+                <div class="m-purchase-wrapper">
+                    <h2 class="m-purchase-title"> <span class="m-purchase-title-first">Waxom</span> Multipurpose
+                        WordPress Theme</h2>
+                    <span class="m-purchase-description">Don't Forget to Rate the Template. Thanks so much!</span>
+                </div>
+                <a href="#" class="m-purchase-button">Purchase Now</a>
+            </section>
         </main>
         <footer class="footer"></footer>
     </div>
