Частично сверстан блок projects

--- a/index.html
+++ b/index.html
@@ -123,6 +123,68 @@
                 </div>
                 <a href="#" class="m-purchase-button">Purchase Now</a>
             </section>
+            <section class="m-projects">
+                <header class="m-projects-header">
+                    <h2 class="m-projects-header-title">Our Latest Projects.</h2>
+                    <p class="m-projects-header-description">Investigationes demonstraverunt lectores legere me lius
+                        quod ii legunt saepius. Claritas est etiam processus dynamicus, qui sequitur mutationem
+                        consuetudium.</p>
+                    <nav class="m-projects-header-menu">
+                        <ul class="m-projects-header-menu-list">
+                            <li class="m-projects-header-menu-item">All</li>
+                            <li class="m-projects-header-menu-item">Web Design</li>
+                            <li class="m-projects-header-menu-item">Mobile App</li>
+                            <li class="m-projects-header-menu-item">Illustration</li>
+                            <li class="m-projects-header-menu-item">Photography</li>
+                        </ul>
+                    </nav>
+                </header>
+                <div class="m-projects-wrapper">
+                    <a href="#" class="m-projects-block">
+                        <img src="img/project_1.png" alt="" class="m-projects-block-img">
+                        <div class="m-project-block-wrapper">
+                            <span class="m-projects-block-title">Claritas Etiam Processus</span>
+                            <span class="m-projects-block-description">Photography, Nature</span>
+                        </div>
+                    </a>
+                    <a href="#" class="m-projects-block">
+
+                        <img src="img/project_2.png" alt="" class="m-projects-block-img">
+                        <div class="m-project-block-wrapper">
+                            <span class="m-projects-block-title">Quam Nutamus Farum</span>
+                            <span class="m-projects-block-description">Graphic Design, Mock-Up</span>
+                        </div>
+                    </a>
+                    <a href="#" class="m-projects-block">
+                        <img src="img/project_3.png" alt="" class="m-projects-block-img">
+                        <div class="m-project-block-wrapper">
+                            <span class="m-projects-block-title">Usus Legentis Videntur</span>
+                            <span class="m-projects-block-description">Photography, Holiday</span>
+                        </div>
+                    </a>
+                    <a href="#" class="m-projects-block">
+                        <img src="img/project_4.png" alt="" class="m-projects-block-img">
+                        <div class="m-project-block-wrapper">
+                            <span class="m-projects-block-title">Claritas Etiam Processus</span>
+                            <span class="m-projects-block-description">Photography, Nature</span>
+                        </div>
+                    </a>
+                    <a href="#" class="m-projects-block">
+                        <img src="img/project_5.png" alt="" class="m-projects-block-img">
+                        <div class="m-project-block-wrapper">
+                            <span class="m-projects-block-title">Quam Nutamus Farum</span>
+                            <span class="m-projects-block-description">Graphic Design, Mock-Up</span>
+                        </div>
+                    </a>
+                    <a href="#" class="m-projects-block">
+                        <img src="img/project_6.png" alt="" class="m-projects-block-img">
+                        <div class="m-project-block-wrapper">
+                            <span class="m-projects-block-title">Usus Legentis Videntur</span>
+                            <span class="m-projects-block-description">Photography, Holiday</span>
+                        </div>
+                    </a>
+                </div>
+            </section>
         </main>
         <footer class="footer"></footer>
     </div>
