верстка блока video

--- a/index.html
+++ b/index.html
@@ -184,6 +184,18 @@
                         </div>
                     </a>
                 </div>
+                <button class="m-projects-button">Load More</button>
+            </section>
+            <section class="m-video">
+                <video class="m-video-player" width="100%" poster="img/bg-video.png">
+                    Your browser doesn't support HTML5 video tag.
+                </video>
+                <div class="m-video-txt">
+                    <button class="m-video-txt-button"></button>
+                    <h3 class="m-video-txt-title">Waxom Video Presentation</h3>
+                    <p class="m-video-txt-decription">Investigationes demonstraverunt lectores legere me lius quod ii legunt saepius, qui sequitur mutationem consuetudium.</p>
+                    <span class="m-video-txt-time">03:26</span>
+                </div>
             </section>
         </main>
         <footer class="footer"></footer>
@@ -191,3 +203,4 @@
 </body>
 
 </html>
+
