--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                     <li class="m-block-item"><a href="#" class="m-block-pag"></a></li>
                 </ul>
             </section>
-            <article class="m-advantage">
+            <section class="m-advantage">
                 <a href="#" class="m-advantage-block">
                     <svg class="m-advantage-icon" xmlns="http://www.w3.org/2000/svg" width="47.6" height="47.602"
                         viewBox="108 0 47.6 47.602">
@@ -104,8 +104,8 @@
                     <span class="m-advantage-desciption">Nam liber tempor cum soluta nobis eleifend option congue nihil
                         imperdiet doming id quod mazim.</span>
                 </a>
-            </article>
-            <article class="m-slider">
+            </section>
+            <section class="m-slider">
                 <h2 class="m-slider-title">Waxom is Realization of your Ideas.</h2>
                 <p class="m-slider-description">Investigationes demonstraverunt lectores legere me lius quod ii legunt
                     saepius. Claritas est etiam processus dynamicus, qui sequitur mutationem consuetudium.</p>
@@ -114,15 +114,15 @@
                     <a class="m-slider-img" href="#"><img src="img/browser-right.png" alt="scrinshot"></a>
                     <a class="m-slider-img" href="#"><img src="img/browser-center.png" alt="scrinshot"></a>
                 </div>
-            </article>
-            <section class="m-purchase">
+            </section>
+            <aside class="m-purchase">
                 <div class="m-purchase-wrapper">
                     <h2 class="m-purchase-title"> <span class="m-purchase-title-first">Waxom</span> Multipurpose
                         WordPress Theme</h2>
                     <span class="m-purchase-description">Don't Forget to Rate the Template. Thanks so much!</span>
                 </div>
                 <a href="#" class="m-purchase-button">Purchase Now</a>
-            </section>
+            </aside>
             <section class="m-projects">
                 <header class="m-projects-header">
                     <h2 class="m-projects-header-title">Our Latest Projects.</h2>
