Верстка блока posts

--- a/index.html
+++ b/index.html
@@ -248,6 +248,69 @@
                 </figure>
                 
             </section>
+            <section class="m-post">
+                <h3 class="m-post-title">Recent Posts.</h3>
+                <p class="m-post-description">Investigationes demonstraverunt lectores legere me lius quod ii legunt saepius. Claritas est etiam processus dynamicus, qui sequitur mutationem consuetudium.</p>
+                <div class="m-post-wrapper">
+                    <article class="m-post-block">
+                        <img src="img/posts_1.png" alt="" class="m-post-block-img">
+                        <div class="m-post-block-time">
+                            <span class="m-post-block-time-date">30</span>
+                            <span class="m-post-block-time-month">Sep.</span>
+                        </div>
+                        <div class="m-post-block-wrapper">
+                            <h4 class="m-post-block-title">Lorem ipsum dolor sit amet</h4>
+                            <p class="m-post-block-description">Claritas est etiam processus dynamicus, qui sequitur mutationem consuetudium.</p>
+                            <a href="" class="m-post-block-link">Read More</a>
+                        </div>
+                        <ul class="m-post-block-list">
+                            <li class="m-post-block-item"><a href="#" class="m-post-block-item-link"></a></li>
+                            <li class="m-post-block-item"><a href="#" class="m-post-block-item-link"></a></li>
+                            <li class="m-post-block-item"><a href="#" class="m-post-block-item-link"></a></li>
+                            <li class="m-post-block-item"><a href="#" class="m-post-block-item-link"></a></li>
+                            <li class="m-post-block-item"><a href="#" class="m-post-block-item-link"></a></li>
+                        </ul>
+                    </article>
+                    <article class="m-post-block">
+                        <img src="img/posts_2.png" alt="" class="m-post-block-img">
+                        <div class="m-post-block-time">
+                            <span class="m-post-block-time-date">30</span>
+                            <span class="m-post-block-time-month">Sep.</span>
+                        </div>
+                        <div class="m-post-block-wrapper">
+                            <h4 class="m-post-block-title">Lorem ipsum dolor sit amet</h4>
+                            <p class="m-post-block-description">Claritas est etiam processus dynamicus, qui sequitur mutationem consuetudium.</p>
+                            <a href="" class="m-post-block-link">Read More</a>
+                        </div>
+                        <ul class="m-post-block-list">
+                            <li class="m-post-block-item"><a href="#" class="m-post-block-item-link"></a></li>
+                            <li class="m-post-block-item"><a href="#" class="m-post-block-item-link"></a></li>
+                            <li class="m-post-block-item"><a href="#" class="m-post-block-item-link"></a></li>
+                            <li class="m-post-block-item"><a href="#" class="m-post-block-item-link"></a></li>
+                            <li class="m-post-block-item"><a href="#" class="m-post-block-item-link"></a></li>
+                        </ul>
+                    </article>
+                    <article class="m-post-block">
+                        <img src="img/posts_3.png" alt="" class="m-post-block-img">
+                        <div class="m-post-block-time">
+                            <span class="m-post-block-time-date">30</span>
+                            <span class="m-post-block-time-month">Sep.</span>
+                        </div>
+                        <div class="m-post-block-wrapper">
+                            <h4 class="m-post-block-title">Lorem ipsum dolor sit amet</h4>
+                            <p class="m-post-block-description">Claritas est etiam processus dynamicus, qui sequitur mutationem consuetudium.</p>
+                            <a href="" class="m-post-block-link">Read More</a>
+                        </div>
+                        <ul class="m-post-block-list">
+                            <li class="m-post-block-item"><a href="#" class="m-post-block-item-link"></a></li>
+                            <li class="m-post-block-item"><a href="#" class="m-post-block-item-link"></a></li>
+                            <li class="m-post-block-item"><a href="#" class="m-post-block-item-link"></a></li>
+                            <li class="m-post-block-item"><a href="#" class="m-post-block-item-link"></a></li>
+                            <li class="m-post-block-item"><a href="#" class="m-post-block-item-link"></a></li>
+                        </ul>
+                    </article>
+                </div>
+            </section>
         </main>
         <footer class="footer"></footer>
     </div>
