Верстка блока partners и обновление картинок

--- a/index.html
+++ b/index.html
@@ -311,6 +311,12 @@
                     </article>
                 </div>
             </section>
+            <section class="m-partners">
+                <a href="#" class="m-partners-img"></a>
+                <a href="#" class="m-partners-img"></a>
+                <a href="#" class="m-partners-img"></a>
+                <a href="#" class="m-partners-img"></a>
+            </section>
         </main>
         <footer class="footer"></footer>
     </div>
