--- a/index.html
+++ b/index.html
@@ -318,7 +318,49 @@
                 <a href="#" class="m-partners-img"></a>
             </section>
         </main>
-        <footer class="footer"></footer>
+        <footer class="footer">
+            <div class="footer-top">
+                <div class="footer-top-block1">
+                    <a href="#" class="h-logo">
+                        <svg class="link-logo-svg" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
+                            width="64" height="56">
+                            <path
+                                d="M52.873,55.128 L58.125,45.939 L63.377,55.128 L52.873,55.128 ZM46.303,45.172 L56.811,45.172 L51.557,54.359 L46.303,45.172 ZM51.557,34.451 L56.811,43.641 L46.303,43.641 L51.557,34.451 ZM39.738,33.686 L50.243,33.686 L44.990,42.874 L39.738,33.686 ZM44.990,22.967 L50.243,32.154 L39.738,32.154 L44.990,22.967 ZM33.168,22.202 L43.676,22.202 L38.422,31.390 L33.168,22.202 ZM38.422,11.480 L43.676,20.671 L33.168,20.671 L38.422,11.480 ZM26.600,10.713 L37.108,10.713 L31.854,19.905 L26.600,10.713 ZM31.854,-0.006 L37.108,9.184 L26.600,9.184 L31.854,-0.006 ZM20.032,20.671 L25.286,11.480 L30.540,20.671 L20.032,20.671 ZM13.465,32.154 L18.718,22.967 L23.971,32.154 L13.465,32.154 ZM6.897,43.641 L12.151,34.451 L17.404,43.641 L6.897,43.641 ZM0.331,55.128 L5.582,45.939 L10.836,55.128 L0.331,55.128 ZM17.404,45.172 L12.151,54.359 L6.897,45.172 L17.404,45.172 ZM23.971,33.686 L18.718,42.874 L13.465,33.686 L23.971,33.686 ZM30.540,22.202 L25.286,31.390 L20.032,22.202 L30.540,22.202 ZM37.108,55.128 L26.600,55.128 L31.854,45.939 L37.108,55.128 ZM43.676,45.172 L38.422,54.359 L33.168,45.172 L43.676,45.172 ZM50.243,55.128 L39.738,55.128 L44.990,45.939 L50.243,55.128 Z" />
+                        </svg>
+                        <span class="link-logo-txt">Waxom</span>
+                    </a>
+                    <p class="footer-top-description">Lorem ipsum dolor sit amet, consec&shy;tetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci suscipit lobortis claritatem.</p>
+                    <a href="#" class="footer-top-link">Read More</a>
+                </div>
+                <div class="footer-top-block2">
+                    <h5 class="footer-top-title">Recent Posts</h5>
+                    <span class="footer-top-date">September 08, 2015</span>
+                    <p class="footer-top-description">Lorem ipsum dolor sit amet, consec&shy;tetuer adipiscing elit</p>
+                    <span class="footer-top-date">September 08, 2015</span>
+                    <p class="footer-top-description">Diam nonummy nibh euismod tincid&shy;unt ut laoreet dolore magna</p>
+                    <span class="footer-top-date">September 08, 2015</span>
+                    <p class="footer-top-description">Claritas est etiam processus dynamic&shy;us, qui sequitur mutationem per seac&shy;ula quarta decima</p>
+
+                </div>
+                <div class="footer-top-block3">
+                    <h5 class="footer-top-title">Our Twitter</h5>
+                    <p class="footer-top-description"><span class="footer-top-description-link">@waxom </span>Cum soluta nobis eleifend option congue nihil imperdiet doming</p>
+                    <span class="footer-top-date">3 mins ago</span>
+                    <p class="footer-top-description">Mirum est <span class="footer-top-description-link">#envato </span>notare quam littera gothica, quam nunc putamus parum anteposuerit litterarum</p>
+                    <span class="footer-top-date">5 hours ago</span>
+                    <p class="footer-top-description">Soluta nobis option <span class="footer-top-description-link">bit.ly/1Hniso7</span></p>
+                    <span class="footer-top-date">20 days ago</span>
+                </div>
+                <div class="footer-top-block4">
+                    <h5 class="footer-top-title">Our Twitter</h5>
+                    <img src="img/footer_1.png" alt="" class="footer-top-img">
+                    <img src="img/footer_2.png" alt="" class="footer-top-img">
+                    <img src="img/footer_3.png" alt="" class="footer-top-img">
+                    <img src="img/footer_4.png" alt="" class="footer-top-img">
+                </div>
+            </div>
+            <div class="footer-bottom"></div>
+        </footer>
     </div>
 </body>
 
