верстка блока Footer bottom

--- a/index.html
+++ b/index.html
@@ -359,7 +359,18 @@
                     <img src="img/footer_4.png" alt="" class="footer-top-img">
                 </div>
             </div>
-            <div class="footer-bottom"></div>
+            <div class="footer-bottom">
+                <ul class="footer-bottom-list1">
+                    <li class="footer-bottom-item">Copyright © 2015 <span class="waxom">Waxom</span></li>
+                    <li class="footer-bottom-item">Privacy Policy</li>
+                    <li class="footer-bottom-item">FAQ</li>
+                    <li class="footer-bottom-item">Support</li>
+                </ul>
+                <ul class="footer-bottom-list2">
+                    <li class="footer-bottom-item">Designed by <span class="waxom">ThemeFire</span></li>
+                    <li class="footer-bottom-item">Only on <span class="waxom">Envato Market</span></li>
+                </ul>
+            </div>
         </footer>
     </div>
 </body>
