Финальные правки footer

--- a/index.html
+++ b/index.html
@@ -344,11 +344,11 @@
                 </div>
                 <div class="footer-top-block3">
                     <h5 class="footer-top-title">Our Twitter</h5>
-                    <p class="footer-top-description"><span class="footer-top-description-link">@waxom </span>Cum soluta nobis eleifend option congue nihil imperdiet doming</p>
+                    <p class="footer-top-description"><a href="#" class="footer-top-description-link">@waxom </a>Cum soluta nobis eleifend option congue nihil imperdiet doming</p>
                     <span class="footer-top-date">3 mins ago</span>
-                    <p class="footer-top-description">Mirum est <span class="footer-top-description-link">#envato </span>notare quam littera gothica, quam nunc putamus parum anteposuerit litterarum</p>
+                    <p class="footer-top-description">Mirum est <a href="#" class="footer-top-description-link">#envato </a>notare quam littera gothica, quam nunc putamus parum anteposuerit litterarum</p>
                     <span class="footer-top-date">5 hours ago</span>
-                    <p class="footer-top-description">Soluta nobis option <span class="footer-top-description-link">bit.ly/1Hniso7</span></p>
+                    <p class="footer-top-description">Soluta nobis option <a href="#" class="footer-top-description-link">bit.ly/1Hniso7</a></p>
                     <span class="footer-top-date">20 days ago</span>
                 </div>
                 <div class="footer-top-block4">
@@ -363,12 +363,12 @@
                 <ul class="footer-bottom-list1">
                     <li class="footer-bottom-item">Copyright © 2015 <span class="waxom">Waxom</span></li>
                     <li class="footer-bottom-item">Privacy Policy</li>
-                    <li class="footer-bottom-item">FAQ</li>
+                    <li class="footer-bottom-item"><a href="#">FAQ</a></li>
                     <li class="footer-bottom-item">Support</li>
                 </ul>
                 <ul class="footer-bottom-list2">
-                    <li class="footer-bottom-item">Designed by <span class="waxom">ThemeFire</span></li>
-                    <li class="footer-bottom-item">Only on <span class="waxom">Envato Market</span></li>
+                    <li class="footer-bottom-item">Designed by <a href="#" class="waxom">ThemeFire</a></li>
+                    <li class="footer-bottom-item">Only on <a href="#" class="waxom">Envato Market</a></li>
                 </ul>
             </div>
         </footer>
